--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://vikaspateldesigner.github.io/portfolio/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.1",
